--- a/level1.html
+++ b/level1.html
@@ -354,7 +354,7 @@
     </script>
 
     <h2>TENSES (PAST, NOW, FUTURE)</h2>
-    <p>Tenses adalah bentuk kata kerja yang digunakan untuk menyatakan waktu kejadian. Tenses terdiri dari beberapa jenis, yaitu:</p>
+    <p>Tenses adalah bentuk kata kerja yang digunakan untuk menyatakan waktu kejadian. Tenses terdiri dari beberapa jenis, salah satunya:</p>
     <ul>
         <li>Simple Present</li>
         <li>Simple Past</li>
@@ -371,9 +371,9 @@
     <br>Tiap kalimat memiliki 3 jawaban, yaitu Simple Present, Simple Past, dan Simple Future.
     <br>Kalimatnya adalah "to school".
     <ol>
-        <li>She goes to school every day.</li>
-        <li>They went to school yesterday.</li>
-        <li>He will go to school tomorrow.</li>
+        <li>She</li>
+        <li>They</li>
+        <li>He</li>
     </ol>
     <i>gunakan huruf kecil!</i>
     <form>
