Fixing background bug

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
-  <body>
+  <body id="login">
     <div class="container">
       <div class="logo-wrapper"></div>
       <div class="form-wrapper">
