--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
           localStorage.setItem("name", name);
           window.location.href = "level1.html";
           return false;
+        } else if (classLevel === "English Conservation II") {
+          let name = document.getElementById("name").value;
+          localStorage.setItem("name", name);
+          window.location.href = "level2.html";
+          return false;
         }
       }
     </script>
