Fixing title and page size

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome, Login Page</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
@@ -9,7 +11,7 @@
     <div class="container">
       <div class="logo-wrapper"></div>
       <div class="form-wrapper">
-        <h2>Hai! Selamat datang di web kelas Konserfasi Bahasa Inggris I & II</h2>
+        <h2>Hello! Welcome to the English Conservation Class I & II website.</h2>
         <form onsubmit="return validateForm()">
           <div class="form-group">
             <label for="name">Name:</label>
