--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <option value="English Conservation II">English Conservation II</option>
             </select>
           </div>
-          <input type="submit" value="Login" />
+          <input class="loginBtn" type="submit" value="Login" />
         </form>
       </div>
     </div>
