--- a/level2.html
+++ b/level2.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <title></title>
 </head>
 <body>
+    <button class="loginBtn" onclick="toggleTheme()">Dark Theme</button><br><p></p>
     still empty :)
 </body>
 </html>
