--- a/level1.html
+++ b/level1.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>English Conservation I</title>
-  <link rel="stylesheet" href="style.css" />
-    <style>
+      <title>English Conservation I</title>
+      <link rel="stylesheet" href="style.css" />
+      <script src="script.js"></script>
+      <style>
         .default {
-            font-family: "Arial", sans-serif;
+          font-family: "Arial", sans-serif;
         }
-        form, input, button, .scale {
-            font-size: 150%;
-            transform: scale(1);
+        form,
+        input,
+        button,
+        .scale {
+          font-size: 150%;
+          transform: scale(1);
         }
         .color {
-            color: blue;
+          color: blue;
         }
-        ol, ul, .soal {
+        ol,
+        ul,
+        .soal {
           font-size: small;
         }
-    </style>
-    <script>
+        
+      </style>
+      <script>
         // Retrieve the name from the index.html file
-        var name = localStorage.getItem('name');
+        var name = localStorage.getItem("name");
 
         // Display the welcome message
-        window.onload = function() {
-            var welcomeMessage = document.getElementById('welcome-message');
-            welcomeMessage.innerHTML = name + '!';
+        window.onload = function () {
+          var welcomeMessage = document.getElementById("welcome-message");
+          welcomeMessage.innerHTML = name + "!";
         };
-    </script>
-</head>
-<body>
-  <h1>Selamat Datang di Kelas Konservasi I,</h1>
-    <h1 id="welcome-message"></h1>
---------------------------------------
-    <h2>TO-BE</h2>
-    <p>TO-BE adalah kata kerja yang digunakan untuk menyatakan keadaan atau situasi yang akan terjadi di masa depan. TO-BE terdiri dari beberapa bentuk, yaitu:</p>
-    <ul>
+      </script>
+    </head>
+    <body>
+      <h1>Selamat Datang di Kelas Konservasi I,</h1>
+      <h1 id="welcome-message"></h1>
+      <button class="loginBtn" onclick="toggleTheme()">Dark Theme</button><br><p></p>
+      --------------------------------------
+      <h2>TO-BE</h2>
+      <p>TO-BE adalah kata kerja yang digunakan untuk menyatakan keadaan atau situasi yang akan terjadi di masa depan. TO-BE terdiri dari beberapa bentuk, yaitu:</p>
+      <ul>
         <li>am</li>
         <li>is</li>
         <li>are</li>
-    </ul>
-    <p>Contoh penggunaan TO-BE:</p>
-    <ul>
+      </ul>
+      <p>Contoh penggunaan TO-BE:</p>
+      <ul>
         <li>I am a student.</li>
         <li>She is a teacher.</li>
         <li>We are students.</li>
-    </ul>
-    <p class="color">LATIHAN:</p>
-    <p>Ubahlah kalimat-kalimat berikut ke dalam bentuk TO-BE!</p>
-    <ol>
+      </ul>
+      <p class="color">LATIHAN:</p>
+      <p>Ubahlah kalimat-kalimat berikut ke dalam bentuk TO-BE!</p>
+      <ol>
         <li>She a doctor.</li>
         <li>They students.</li>
         <li>He a teacher.</li>
-    </ol>
-    <i>gunakan huruf kecil!</i>
-    <form>
+      </ol>
+      <i>gunakan huruf kecil!</i>
+      <form>
         <label for="answer1">Jawaban 1:</label>
         <input type="text" id="answer1" name="answer1" required>
         <br>
@@ -65,39 +73,40 @@
         <input type="text" id="answer3" name="answer3" required>
         <br>
         <input type="submit" value="Submit">
-    </form>
-    <script>
+      </form>
+      <script>
         // Define the correct answers
-        var correctAnswers = ['she is a doctor', 'they are students', 'he is a teacher'];
+        var correctAnswers = ["she is a doctor", "they are students", "he is a teacher"];
 
         // Validate the answers
-        document.querySelector('form').onsubmit = function(event) {
-            event.preventDefault();
-            var answers = [
-                document.getElementById('answer1').value,
-                document.getElementById('answer2').value,
-                document.getElementById('answer3').value
-            ];
+        document.querySelector("form").onsubmit = function (event) {
+          event.preventDefault();
+          var answers = [
+            document.getElementById("answer1").value,
+            document.getElementById("answer2").value,
+            document.getElementById("answer3").value,
+          ];
 
-            var score = 0;
-            for (var i = 0; i < answers.length; i++) {
-                if (answers[i] === correctAnswers[i]) {
-                    score++;
-                }
+          var score = 0;
+          for (var i = 0; i < answers.length; i++) {
+            if (answers[i] === correctAnswers[i]) {
+              score++;
             }
+          }
 
-            alert('Jawaban Benar: ' + score + ' dari ' + correctAnswers.length);
+          alert("Jawaban Benar: " + score + " dari " + correctAnswers.length);
         };
-    </script>
---------------------------------------
-    <h2>PART OF SPEECH</h2>
-    <p>Part of speech adalah klasifikasi kata berdasarkan fungsinya dalam kalimat. Part of speech terdiri dari beberapa jenis, yaitu:</p>
-    <ul>
+      </script>
+      --------------------------------------
+      <h2>PART OF SPEECH</h2>
+      <p>Part of speech adalah klasifikasi kata berdasarkan fungsinya dalam kalimat. Part of speech terdiri dari beberapa jenis, yaitu:</p>
+      <ul>
         <li>Noun</li>
         <li>Verb</li>
         <li>Adjective</li>
         <li>Adverb</li>
         <li>Pronoun</li>
+      </ul>
         <li>Preposition</li>
         <li>Conjunction</li>
         <li>Interjection</li>
