--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome, Login Page</title>
+    <base href="page404.html" />
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -48,5 +50,6 @@
         }
       }
     </script>
+    <center><p>content by Rasyid Kurniawan,<br>cover design by Farid Drawing.<br>2024</p></center>
   </body>
 </html>
