--- a/level2.html
+++ b/level2.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="page404.html"/>
+    <link rel="icon" href="icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-    <title></title>
+    <title>English Conservation 2</title>
 </head>
 <body>
-    <button class="loginBtn" onclick="toggleTheme()">Dark Theme</button><br><p></p>
-    still empty :)
+    <button class="loginBtn" onclick="toggleTheme()">Change Theme</button>
+    <br>
+    <p>still empty :)</p>
 </body>
 </html>
