--- a/level1.html
+++ b/level1.html
@@ -783,6 +783,6 @@
     <a href="level2.html">Next</a>
     <a href="index.html">Back to Home</a>
         -->
-        
+        <center><p>thanks to Jabinsar Saragih<br>for input column color ideas.</p></center>
   </body>
 </html>
