--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body id="login">
+    <a href="https://github.com/krasyid822/blog-for-learning-English/releases/download/v1.0.0/EnglishClass.apk" style="color: white;">Get App!</a>
     <div class="container">
       <div class="logo-wrapper"></div>
       <div class="form-wrapper">
@@ -50,6 +51,6 @@
         }
       }
     </script>
-    <center><p>content by Rasyid Kurniawan,<br>cover design by Farid Drawing.<br>2024</p></center>
+    <center><p>content by Rasyid Kurniawan,<br>cover design by M Farid Yamin.<br>2024</p></center>
   </body>
 </html>
