--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
   <body id="login">
-    <a href="https://github.com/krasyid822/blog-for-learning-English/releases/download/v1.0.0/EnglishClass.apk" style="color: white;">Get App!</a>
+    <a href="https://github.com/krasyid822/blog-for-learning-English/releases/download/v1.0.0/EnglishClass.apk" style="color: white;"><img src="https://developer.android.com/static/images/logos/android.svg" height="30px">Get App!</a><br><i style="font-size: small;"> only android devices.</i>
     <div class="container">
       <div class="logo-wrapper"></div>
       <div class="form-wrapper">
@@ -18,7 +18,7 @@
         <form onsubmit="return validateForm()">
           <div class="form-group">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required />
+            <input type="text" id="name" name="name" placeholder="Enter your name here." required />
           </div>
           <div class="form-group">
             <label for="class-level">Class Level:</label>
@@ -51,6 +51,6 @@
         }
       }
     </script>
-    <center><p>content by Rasyid Kurniawan,<br>cover design by M Farid Yamin.<br>2024</p></center>
+    <center><p style="color: silver;">content by Rasyid Kurniawan,<br>cover design by M Farid Yamin.<br>2024</p></center>
   </body>
 </html>
