--- a/level2.html
+++ b/level2.html
@@ -13,5 +13,9 @@
     <button class="loginBtn" onclick="toggleTheme()">Change Theme</button>
     <br>
     <p>still empty :)</p>
+    <pre>Masukkan :
+        - Satu halaman untuk satu materi saja, jangan campur. 
+          Seperti punya Rizky.
+    </pre>
 </body>
 </html>
