--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <option value="English Conservation II">English Conservation II</option>
             </select>
           </div>
-          <input class="loginBtn" type="submit" value="Login" />
+          <input class="loginBtn" type="submit" value="Sign In" />
         </form>
       </div>
     </div>
